fix(ui): HoverCard - align close icon

--- a/packages/ui/src/ui/hover-card/hover-card.module.css
+++ b/packages/ui/src/ui/hover-card/hover-card.module.css
@@ -32,7 +32,7 @@ button.anchor:hover {
 
 .closeBtn {
   position: absolute;
-  right: 0;
+  right: var(--space-xxxsmall);
   top: var(--space-xxxsmall);
   width: var(--space-large);
   height: var(--space-large);
